@@ -4,24 +4,27 @@ import ch.hslu.appe.fbs.business.utils.SessionIdGenerator;
 import ch.hslu.appe.fbs.data.EmployeePersistor;
 import ch.hslu.appe.fbs.model.entities.Employee;
 import ch.hslu.appe.fbs.remote.FBSFeedback;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 
-import java.security.MessageDigest;
 import java.util.HashMap;
-import java.util.List;
 
 /**
  * Manager for sessions as a singleton.
  *
  * @author Mischa Gruber
  */
-public class SessionManager {
+public final class SessionManager {
 
     private static SessionManager instance = null;
-    private static Object mutex = new Object();
+    private static final Object MUTEX = new Object();
 
     private HashMap<String, Integer> sessionPool;
 
     private EmployeePersistor employeePersistor;
+
+    private static final Logger LOGGER = LogManager.getLogger(SessionManager.class.getName());
+
 
     /**
      * Returns the singleton instance of the SessionManager.
@@ -30,7 +33,7 @@ public class SessionManager {
     public static SessionManager getInstance() {
         SessionManager result = instance;
         if (result == null) {
-            synchronized (mutex) {
+            synchronized (MUTEX) {
                 result = instance;
                 if (result == null) {
                     instance = result = new SessionManager();
@@ -54,21 +57,26 @@ public class SessionManager {
      * @param employeeId database id of the employee
      * @return new created session id
      */
-    private String createNewSessionId(int employeeId) {
+    private String createNewSessionId(final int employeeId) {
         String sessionId = SessionIdGenerator.getNewId();
-        Integer employeeIdInteger = new Integer(employeeId);
+        Integer employeeIdInteger = Integer.valueOf(employeeId);
 
         synchronized (sessionPool) {
+            LOGGER.info("Create new Session for Employee with ID: "  + employeeId);
             sessionPool.put(sessionId, employeeIdInteger);
         }
 
         return sessionId;
     }
 
-    public int getEmployeeIdFromSessionId(String sessionId) {
-
+    /**
+     * Returns the employee id of the given session id.
+     * @param sessionId the session id that should be converted
+     * @return employee id, which is assigned to the session id
+     */
+    public int getEmployeeIdFromSessionId(final String sessionId) {
         synchronized (sessionPool) {
-            if(sessionPool.containsKey(sessionId)) {
+            if (sessionPool.containsKey(sessionId)) {
                 return sessionPool.get(sessionId);
             }
         }
@@ -76,9 +84,16 @@ public class SessionManager {
         return -1;
     }
 
-    public boolean getIsLoggedIn(String sessionId) {
+    /**
+     * Returns if the session id is logged in.
+     * @param sessionId the session id that has to be checked.
+     * @return true if the session id is logged id, otherwise false
+     */
+    public boolean getIsLoggedIn(final String sessionId) {
         synchronized (sessionPool) {
-            if(sessionPool.containsKey(sessionId)) {
+            if (sessionPool.containsKey(sessionId)) {
+                //LOGGER.info("Check if Employee with ID: "  +
+                // this.getEmployeeIdFromSessionId(sessionId)+ " is logged in.");
                 return true;
             }
         }
@@ -91,19 +106,16 @@ public class SessionManager {
      * @param passwordHash password as a sha-256 hash of the employee
      * @return session id string on success, null on failure
      */
-    public String login(String username, String passwordHash) {
+    public String login(final String username, final String passwordHash) {
         System.out.println("employee: " + username);
         Employee employee = employeePersistor.getByUserName(username);
         if (employee != null) {
-            if (employee.getUsername().equals(username)) {
-                System.out.println("database: " + employee.getPassword());
-                System.out.println("client: " + passwordHash);
-                
-                if(employee.getPassword().equals(passwordHash)) {
-                    return createNewSessionId(employee.getIdEmployees());
-                }
+            if (employee.getUsername().equals(username) && employee.getPassword().equals(passwordHash)) {
+                LOGGER.info("Login attempt successful Employee: " + username);
+                return createNewSessionId(employee.getIdEmployees());
             }
         }
+        LOGGER.info("Login attempt unsuccessful Employee: " + username);
         return null;
     }
 
@@ -113,14 +125,15 @@ public class SessionManager {
      * @param username username of the session id
      * @return FBSFeedback.SUCCESS on success, otherwise a specific feedback
      */
-    public FBSFeedback logout(String sessionId, String username) {
+    public FBSFeedback logout(final String sessionId, final String username) {
         Employee employee = employeePersistor.getByUserName(username);
-        Integer userId = new Integer(employee.getIdEmployees());
+        Integer userId = Integer.valueOf(employee.getIdEmployees());
 
         synchronized (sessionPool) {
-            if(sessionPool.containsKey(sessionId)) {
-                if(sessionPool.get(sessionId).equals(userId)) {
+            if (sessionPool.containsKey(sessionId)) {
+                if (sessionPool.get(sessionId).equals(userId)) {
                     sessionPool.remove(sessionId);
+                    LOGGER.info("Logout attempt successful Employee: " + username);
                     return FBSFeedback.SUCCESS;
                 } else {
                     return FBSFeedback.SESSION_ID_USERNAME_NOT_MATCHING;
